# controle-financeiro

controle-financeiro/: Caddyfile  docker-compose.yml
controle-financeiro/backend/: requirements.txt
controle-financeiro/backend/app/: main.py
controle-financeiro/frontend/public/: index.html
finance-app/: docker-compose.yml  nginx.conf
finance-app/backend/: Dockerfile  pyproject.toml
finance-app/backend/app/: config.py
finance-app/frontend/: Dockerfile  index.html  package.json
finance-manager-fastapi-pwa/: README.md  docker-compose.yml  requirements.txt
finance-manager-fastapi-pwa/backend/: auth.py  db.py  main.py  models.py  requirements.txt  schemas.py  settings.py  utils.py
finance-manager-fastapi-pwa/backend/routers/: __init__.py  auth_token.py  crud_routes.py  report_routes.py  sync_routes.py  user_routes.py
finance-manager-fastapi-pwa/docker/: Dockerfile
finance-manager-fastapi-pwa/frontend/: admin.js  app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
finance_app/: Dockerfile  docker-compose.yml  requirements.txt
finance_app/backend/: database.py  main.py  models.py  schemas.py  utils.py
finance_app/backend/routers/: auth.py  finance.py  reports.py
finance_app/frontend/: app.js  index.html  manifest.json  service-worker.js  styles.css
finance_webservice/: Dockerfile  README.md  requirements.txt
finance_webservice/app/: database.py  main.py  models.py  schemas.py  security.py
finance_webservice/frontend/: app.js  index.html  manifest.json  service-worker.js
