[project]
name = "finance-api"
version = "0.1.0"
description = "Personal finance API with FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "sqlalchemy>=2.0.36",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.8.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9"
]
